@@ -39,6 +39,10 @@ Bugs fixed
 * #943: In autosummary, recognize "first sentences" to pull from the docstring
   if they contain uppercase letters.
 
+* #923: Take the entire LaTeX document into account when caching
+  pngmath-generated images.  This rebuilds them correctly when
+  ``pngmath_latex_preamble`` changes.
+
 Documentation
 -------------
 
